Closed Bug 571440 Opened 14 years ago Closed 14 years ago

Android build fails on new quota check from bug 520098 (nsLocalFileUnix.cpp)

Categories

(Core :: XPCOM, defect)

ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mbrubeck, Assigned: mbrubeck)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
Bug 520098 was caused by differences in quotactl between Linux and Darwin/BSD.

The patch in that bug relies on the fact that Linux has <sys/sysmacros.h> while Darwin does not.  But this is not a good test for a Linux-style quotactl.  In particular, Android has <sys/sysmacros.h> but does not have quotactl at all.

This patch looks for <linux/quota.h> as a more reliable test of quotactl compatibility.  It also correctly handles Android, where we have <linux/quota.h> but not <sys/quota.h>.

The patch also removes an unused, incorrect check for HAVE_SYS_STAT_H - this macro is never defined in xpcom (there is no AC_CHECK_HEADER or other code to define it), and anyway nsLocalFileUnix.cpp includes <sys/stat.h> unconditionally.

Inspired by http://github.com/axic/ruby-quota/blob/master/quota.c which also has some useful code if we want to write quota code that actually does compile on Darwin and other BSD systems.
Attachment #450588 - Flags: review?(benjamin)
Attachment #450588 - Flags: review?(benjamin) → review+
http://hg.mozilla.org/mozilla-central/rev/84c15bad7d1c
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: