Bug 571440 - Android build fails on new quota check from bug 520098 (nsLocalFileUnix.cpp), r=bsmedberg